--- a/styles/style.css
+++ b/styles/style.css
@@ -13,19 +13,352 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  width: 183px;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  height: 32px;
+  background-image: url(../images/.logo_place_header.svg);
+  background-size: cover;
+}
+
+.header__title {
+  display: flex;
+  color: black;
+  align-items: center;
+  justify-content: center;
+  font-size: 102px;
+  font-weight: bold;
+  margin-left: 64px;
+  width: 730px;
+  line-height: 96px;
+  z-index: 3;
+}
+
+.header__description {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  z-index: 3;
+}
+
+.header__subtitle {
+font-size: 18px;
+font-weight: normal;
+line-height: 25px;
+z-index: 3;
+}
+
+.header__link::after {
+  content: ' →';
+}
+
+.header__link {
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  right: 0;
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  z-index: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.description {
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns {
+  margin: 100px 0;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  align-items: flex-start;
+}
+
+.two-columns__brief {
+  width: 175px;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #2f90ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph {
+  margin-bottom: 30px;
+}
+
+
+.two-columns__main-text:last-of-type {
+  margin-bottom: 0px;
+}
+
+.two-columns__main-text_text_bold {
+  font-weight: bold;
+}
+
+.digits {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section-title {
+  display: flex;
+  width: 60%;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: bold;
+  justify-content: center;
+  margin-bottom: 0;
+}
+
+.section-title_space_top-l {
+  margin-top: 100px;
+}
+
+.section-title_space_bottom {
+  margin-bottom: 20px;
+}
+
+.section-subtitle {
+  display: flex;
+  width: 60%;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  justify-content: center;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  padding-top: 60px;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.table_space_bottom {
+  margin-bottom: 100px;
+}
+
+.table__cell {
+  width: 250px;
+  margin-bottom: 80px;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.table__text {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+}
+
+.table__text_type_author {
+  margin-top: 20px;
+}
+
+.feynman {
+  display: flex;
+  position:relative;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f2f2f2 ;
+  background-image: url(../images/feynman.png);
+  background-position-x: left;
+  background-position-y: bottom;
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  height: 890px;
+}
+
+.feynman__title {
+  display: flex;
+  margin: 100px auto 0 auto;
+  width: 648px;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: bold;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  margin-top: 70px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal
+}
+
+.feynman__link::after {
+  content: ' →';
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  text-decoration: none;
+
+}
+.kaufman {
+  background-color: #1f1f1f;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  color: white;
+  z-index: 9;
+}
+
+.section-title_space_top-s {
+  margin-top: 90px;
+  z-index: 9;
+}
+.section-subtitle_theme_dark {
+  color: white;
+  z-index: 9;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 9;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  size: 877px 877px;
+  top: 0;
+  right: -210px;
+  z-index: 1;
+}
+
+.footer {
+  display: flex;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  justify-content: center;
+}
+
+.footer__columns {
+  position: relative;
+  display: flex;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  width: 90%;
+  justify-content: space-between;
+  align-content: start;
+}
+
+.footer__column {
+  display: flex;
+  color: white;
+  flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.logo_place_footer {
+  height: 35px;
+  background-image: url(../images/logo_place_footer.svg);
+  background-size: cover;
+}
+
+.footer__author {
+  padding: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-heading {
+  margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.footer__column-links {
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.footer__column_content_info {
+  display: flex;
+}
+
+.footer__column_content_social{
+  display: flex;
+}
+
+.footer__column-links {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-decoration: none;
+  color: white;
+}
+
+.footer__social-icons {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
