--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@
   max-height: 756px;
   background-color: #f2f2f2;
   display: flex;
+  position: relative;
   /* выше установили ограничения для секции */
 }
 
@@ -29,6 +30,7 @@
   height: 32px;
   background-image: url(../images/.logo_place_header.svg);
   background-size: cover;
+  z-index: 3;
 }
 
 .header__title {
