--- a/styles/style.css
+++ b/styles/style.css
@@ -83,9 +83,8 @@ margin: 0;
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  background-position: center;
-  background-size: cover;
   position: absolute;
+  display: flex;
   right: 0;
   top: 64px;
   z-index: 0;
