--- a/styles/style.css
+++ b/styles/style.css
@@ -210,7 +210,7 @@ margin: 0;
   position:relative;
   flex-direction: column;
   align-items: center;
-  background-color: #f2f2f2 ;
+  background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-position-x: left;
   background-position-y: bottom;
@@ -233,7 +233,7 @@ margin: 0;
   margin: 70px auto 0 auto;
   font-size: 36px;
   line-height: 51px;
-  font-weight: normal
+  font-weight: normal;
 }
 
 .feynman__link::after {
@@ -347,11 +347,6 @@ margin: 0;
   line-height: 30px;
   font-weight: bold;
   margin-top: 0;
-}
-
-.footer__column-links {
-  font-size: 18px;
-  line-height: 30px;
 }
 
 .footer__column-links {
