--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,6 @@
   /* выше установили ограничения для секции */
 }
 
-.global_link::after {
-  content: ' →';
-}
-
 .logo {
   width: 183px;
 }
@@ -44,7 +40,7 @@
   justify-content: center;
   font-size: 102px;
   font-weight: bold;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   width: 730px;
   line-height: 96px;
   z-index: 3;
@@ -68,6 +64,7 @@ margin: 0;
 
 .header__link {
   text-decoration: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -129,7 +126,7 @@ margin: 0;
   margin-bottom: 0px;
 }
 
-.two-columns__main-text_text_bold {
+.two-columns__span-accent {
   font-weight: bold;
 }
 
@@ -148,14 +145,11 @@ margin: 0;
   justify-content: center;
   margin-bottom: 0;
   margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .section-title_space_top-l {
   margin-top: 100px;
-}
-
-.section-title_space_bottom {
-  margin-bottom: 20px;
 }
 
 .section-subtitle {
@@ -175,6 +169,8 @@ margin: 0;
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
+  list-style-type: none;
+  margin: 0;
 }
 
 .table_space_bottom {
@@ -197,12 +193,7 @@ margin: 0;
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
-  margin: 0;
-}
-
-.table__text_type_author {
   margin: 20px auto 0 auto;
-
 }
 
 .feynman {
@@ -216,7 +207,7 @@ margin: 0;
   background-position-y: bottom;
   background-repeat: no-repeat;
   background-size: 867px 637px;
-  height: 890px;
+  min-height: 890px;
 }
 
 .feynman__title {
@@ -248,8 +239,9 @@ margin: 0;
   line-height: 51px;
   font-weight: normal;
   text-decoration: none;
-
+  color: #2f80ed;
 }
+
 .kaufman {
   background-color: #1f1f1f;
   display: flex;
@@ -273,7 +265,6 @@ margin: 0;
 }
 .section-subtitle_theme_dark {
   color: white;
-  margin: 20px auto 0 auto;
   z-index: 9;
 }
 
@@ -290,8 +281,11 @@ margin: 0;
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  display: flex;
   position: absolute;
-  size: 877px 877px;
+  height: 877px;
+  width: 877px;
   top: 0;
   right: -210px;
   z-index: 1;
@@ -318,6 +312,7 @@ margin: 0;
   display: flex;
   color: white;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .footer__column_content_copyright {
@@ -346,10 +341,16 @@ margin: 0;
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
-  margin-top: 0;
+  margin: 0;
 }
 
 .footer__column-links {
+  display: flex;
+  margin: 20px 0 16px 0;
+  flex-direction: column;
+}
+
+.footer__column-link {
   font-size: 18px;
   line-height: 30px;
   font-weight: normal;
