--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,6 +1,6 @@
 .feynman__title {
     display: flex;
-    margin: 100px auto 0 auto;
+    margin: 0 auto 0 auto;
     width: 648px;
     font-size: 120px;
     line-height: 1.15;
