--- a/blocks/khan/__container/khan__container.css
+++ b/blocks/khan/__container/khan__container.css
@@ -1,6 +1,7 @@
-.khan {
+.khan__container {
     display: flex;
     flex-direction: column;
-    padding-top: 105px;
+    width: 80%;
+    margin: 0 auto 0 auto;
     background-color: #f2f2f2;
 }
