--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -3,7 +3,7 @@
     top: 30px;
     left: 64px;
     height: 32px;
-    background-image: url(/images/logo_place_header.svg);
+    background-image: url(../../../images/logo_place_header.svg);
     background-size: cover;
     z-index: 3;
   }
