--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 60px 100px 0 0;
+    padding: 60px 0 0 0;
+    margin: 0 100px 0 0;
     width: 240px;
 }
 
-.cards__item:nth-of-type(3) {
-    margin: 60px 0 0 0;
+.cards__item:nth-child(3n) {
+    margin: 0;
 }
