--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -2,4 +2,10 @@
     display: flex;
     width: 270px;
     height: 38px;
+    opacity: 1;
+    transition: opacity .5s linear;
+}
+
+.resources__logo:hover {
+    opacity: 0.5;
 }
